--- a/dauber.html
+++ b/dauber.html
@@ -166,6 +166,17 @@
                 ところで、ニュースを覗く度に私は、一度も星を眺めた事のない天文学者の著作を読んでいる様な、妙な気分になった覚えがあります。つまり落書きが苦役であって、真実のそれ、すなわち情熱と快楽ではないかの様に、書かれているわけです。私は、ADAMSの著：KINGSIZEを読んで、私が感じた定義は「DO IT YOUR SELF」、それで、我々が何かの表現を考えた場合には、形式と内容という古くからの問題に立ち返るわけです。しかし、特にある事柄の表現について考えるのでなければ、実際には、それは我々に与えてくれない。そこで、あの定義は敬意をもって受け入れておいて、それからその先にある物を探求する。私の場合で言えば脱構築にいたるわけです。
                 そしてつねに新たな意味を獲得していく、落書きは、ことさら風変わりな何物かではない。いずれ分かりますが、落書きは都会という場所で待ち伏せています。いつ何時、我々の目の前に現れるやもしれないのです。ところで、これはよく起こる事ですが、我々はある思い違いをします。例えば落書きという行為そのものが即、破壊行為であると、それは思い違いです。そのものがなんであるかを知るきっかけでしかありません。
 
+                私がなぜこの落書きという謎に惹きつけられたのかという疑問を紐解くと、無言の蓄積なのだと思います。
+                ベールに包まれた魅力は時に毒にもなりますが、薬にもなり得ます。
+
+                特に誰かに伝達するという形式を取らずに、作品もしくは落書きがその場所に停滞する。
+                その停滞している間、作品は夢のように現れ、夢のように消えて観客の中にしか残らない。
+                ちょうど例として、
+                私の記憶が正しければ代表的な人物として挙げるとキースヘリングだと思われます。
+                理由として、ピクトグラムという言語を活用し、夢の様に消えるという考え方にチョークを活用していたという事、
+                コミュニケーションの新しい形をいち早く取り入れていた事が、社会から見て一般社会に受け入れられたのだと思います。
+                特に1964年東京オリンピックの他国の方々とのコミュニケーションが難しい当時の日本人にとって間を取り持つために、勝見勝らによって開発されたのが始まりとあり、西洋という文化と和の文化が新しいカルチャの源流を生み出したという意味では、
+                薬になり得たいい例なのだと思われます。
         </p>
             </div>
           </div>
