--- a/dauber.html
+++ b/dauber.html
@@ -175,7 +175,7 @@
                 私の記憶が正しければ代表的な人物として挙げるとキースヘリングだと思われます。
                 理由として、ピクトグラムという言語を活用し、夢の様に消えるという考え方にチョークを活用していたという事、
                 コミュニケーションの新しい形をいち早く取り入れていた事が、社会から見て一般社会に受け入れられたのだと思います。
-                特に1964年東京オリンピックの他国の方々とのコミュニケーションが難しい当時の日本人にとって間を取り持つために、勝見勝らによって開発されたのが始まりとあり、西洋という文化と和の文化が新しいカルチャの源流を生み出したという意味では、
+                特に1964年東京オリンピックの他国の方々とのコミュニケーションが難しい当時の日本人にとって間を取り持つために、勝見勝らによって開発されたのが始まりとあり、西洋という文化と和の文化が新しいカルチャーの源流を生み出したという意味では、
                 薬になり得たいい例なのだと思われます。
         </p>
             </div>
