--- a/dauber.html
+++ b/dauber.html
@@ -199,7 +199,9 @@
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="js/crime.js"></script>
         <script src="js/tiltfx.js"></script>
-        <script src="three.min.js"></script>
+        <script src="js/three.min.js"></script>
+        <script src="js/GLTFLoader.js"></script>
+        <script src="js/OrbitControls.js"></script>
         <script>
           let scene, camera, renderer;
           function init() {
