--- a/dauber.html
+++ b/dauber.html
@@ -106,11 +106,14 @@
             <div>
               <p>Introduction: where should we start?</p>
               <p>
-                二十世紀から二十一世紀の頃、朝のしらしら日が昇ってから夜の帳が降りるまで、獣の目に映るものは、ビルの谷間、垂直に並んだ建造物、絶えず入れ替わる男女、それに、どうやら枯れ葉の詰まった下水道の様だ。己の憧れている物があり、建物を塗りたくる悦びと構造物の臭いを運ぶ風である事を、私は知らなかった。いや。知る術がなかった。
+                二十世紀から二十一世紀の頃、朝のしらしら日が昇ってから夜の帳が降りるまで、獣の目に映るものは、ビルの谷間、垂直に並んだ建造物、絶えず入れ替わる男女、それに、どうやら枯れ葉の詰まった下水道の様だ。己の憧れている物があり、建物を塗りたくる悦びと構造物の臭いを運ぶ風である事を、私は知らなかった。</p>
+              <p>いや。知る術がなかった。</p>
+              <p>
                 私はこの東国に生き、私を知っている人間が、ある定められた回数だけ私を眺め、私は消えていく。
                 しかし世界のからくりは、獣の単純な心にとってはあまりにも複雑に描写される。
                 私は焦点を絞った。薄暗いモヤモヤと映る夢、何世代もの人間が、ありふれた、そしてある意味では永遠に変わらぬ、営みの素材となるべき運命の塗布具。
                 それは一人の人間の夢に過ぎない、しかし万人の記憶の一部となる。
+              </p>
             </div>
           </div>
           <!--carousel-custom-->
@@ -160,7 +163,7 @@
       <div class="container">
         <div class="col-md-12">
           <p>Section 1: The Mystery of Graffiti</p>
-              <p>
+          <p>
                 まず最初に、私から何を期待すべきか、いやむしろ、何を期待すべきでないか、はっきり申し上げておきたいと思います。落書きという謎は題目そのままで謎にあります。 したがって皆さんは、肝心なのは「謎」であるとお取りになるかもしれない。あるいは、一層悪い事に、その謎の正解をどうやら見つけたと、私が勝手にそう思い込んでいるとお取りになるかもしれない。 実際には、皆さんにお教えする様な事は、私には何もありません。
                 私はこれまで落書きを肌で感じ、腑分けし、落書きを（もしくは書こうと試み）、楽しんでもきました。そしてこの最後の行為こそが、何よりも大切な事である事を悟りました。「落書きを汲む」。これこそが私の得た、いわゆる最終的な結論です。事実、街にある空白を前にする度に私は、落書きを再発見するもの、という気がしています。 過去は何も役に立ちません。したがって私は、すでに申し上げた通り、自分の抱えている迷いを皆さんにご披露するだけなのです。この生涯の大半を落書きに捧げてきましたが、皆さんにお伝えできるのは様々な疑問でしかありません。
                 ところで、ニュースを覗く度に私は、一度も星を眺めた事のない天文学者の著作を読んでいる様な、妙な気分になった覚えがあります。つまり落書きが苦役であって、真実のそれ、すなわち情熱と快楽ではないかの様に、書かれているわけです。私は、ADAMSの著：KINGSIZEを読んで、私が感じた定義は「DO IT YOUR SELF」、それで、我々が何かの表現を考えた場合には、形式と内容という古くからの問題に立ち返るわけです。しかし、特にある事柄の表現について考えるのでなければ、実際には、それは我々に与えてくれない。そこで、あの定義は敬意をもって受け入れておいて、それからその先にある物を探求する。私の場合で言えば脱構築にいたるわけです。
@@ -178,23 +181,27 @@
                 特に1964年東京オリンピックの他国の方々とのコミュニケーションが難しい当時の日本人にとって間を取り持つために、勝見勝らによって開発されたのが始まりとあり、西洋という文化と和の文化が新しいカルチャーの源流を生み出したという意味では、
                 薬になり得たいい例なのだと思われます。
         </p>
-            </div>
-          </div>
-          <!--main-->
-          <div id="main">
-            <div class="container">
-              <div id="productNav" class="col-md-12">
-                <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
-              </div>
-            </div>
+          <p>Section ２:short story</p>
+          <p>エントロピー（落書き）＋動的平衡（精神）＝次のステップへ？
+            森と都市に見る、景観の創造性は森は無作為に表現された素材を人が素晴らしいと感じる心を、都市に再構築する事で、自然が作り出した営みを人間が再構成する事で社会に
+          </p>
+        </div>
+      </div>
+      <!--main-->
+      <div id="main">
+        <div class="container">
+          <div id="productNav" class="col-md-12">
+            <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
           </div>
         </div>
-        <!--main-->
+      </div>
+    </div>
+    <!--main-->
 
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="js/crime.js"></script>
-        <script src="js/tiltfx.js"></script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/crime.js"></script>
+    <script src="js/tiltfx.js"></script>
 </body>
 </html>
