--- a/dauber.html
+++ b/dauber.html
@@ -111,7 +111,8 @@
               <p>
                 私はこの東国に生き、私を知っている人間が、ある定められた回数だけ私を眺め、私は消えていく。
                 しかし世界のからくりは、獣の単純な心にとってはあまりにも複雑に描写される。
-                私は焦点を絞った。薄暗いモヤモヤと映る夢、何世代もの人間が、ありふれた、そしてある意味では永遠に変わらぬ、営みの素材となるべき運命の塗布具。
+                私は焦点を絞った。薄暗いモヤモヤと映る夢、何世代もの人間が、ありふれた、そしてある意味では永遠に変わらぬ、営みの素材となるべき運命の塗布具。</p>
+              <p>
                 それは一人の人間の夢に過ぎない、しかし万人の記憶の一部となる。
               </p>
             </div>
