--- a/dauber.html
+++ b/dauber.html
@@ -126,13 +126,13 @@
                 <div class="item active">
                   <img src="https://i.pinimg.com/originals/59/31/35/593135236a7807c6e6e6341c77a9b810.png" alt="..." class="img-responsive center-block" height="600" width="600">
                 </div>
-                <!--<div class="item">
-                <img src="https://i.pinimg.com/originals/07/77/3f/07773f9a7f13ad4595dcda25bbfb3fc2.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
+                <div class="item">
+                  <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
+                </div>
               </div>
-            </div>-->
 
-                <!-- Controls -->
-                <!--<a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
+              <!-- Controls -->
+              <!--<a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
               <span class="sr-only">Previous</span>
             </a>
             <a class="right carousel-control" href="#carousel-custom" role="button" data-slide="next">
@@ -140,7 +140,7 @@
             </a>-->
 
 
-                <!-- Indicators start
+              <!-- Indicators start
               <ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
                 <li data-target="#carousel-custom" data-slide-to="0" class="active">
                   <img src="https://i.pinimg.com/originals/15/d2/36/15d236bda4195e9c6bd8fe339393161d.jpg" alt="..." class="img-responsive center-block" height="60" width="60">
@@ -151,20 +151,20 @@
 
               </ol>
               Indicators end-->
-              </div>
-
             </div>
 
-            <!--carousel-custom-->
           </div>
+
+          <!--carousel-custom-->
         </div>
       </div>
     </div>
-    <div id="main02">
-      <div class="container">
-        <div class="col-md-12">
-          <p>Section 1: The Mystery of Graffiti</p>
-          <p>
+  </div>
+  <div id="main02">
+    <div class="container">
+      <div class="col-md-12">
+        <p>Section 1: The Mystery of Graffiti</p>
+        <p>
                 まず最初に、私から何を期待すべきか、いやむしろ、何を期待すべきでないか、はっきり申し上げておきたいと思います。落書きという謎は題目そのままで謎にあります。 したがって皆さんは、肝心なのは「謎」であるとお取りになるかもしれない。あるいは、一層悪い事に、その謎の正解をどうやら見つけたと、私が勝手にそう思い込んでいるとお取りになるかもしれない。 実際には、皆さんにお教えする様な事は、私には何もありません。
                 私はこれまで落書きを肌で感じ、腑分けし、落書きを（もしくは書こうと試み）、楽しんでもきました。そしてこの最後の行為こそが、何よりも大切な事である事を悟りました。「落書きを汲む」。これこそが私の得た、いわゆる最終的な結論です。事実、街にある空白を前にする度に私は、落書きを再発見するもの、という気がしています。 過去は何も役に立ちません。したがって私は、すでに申し上げた通り、自分の抱えている迷いを皆さんにご披露するだけなのです。この生涯の大半を落書きに捧げてきましたが、皆さんにお伝えできるのは様々な疑問でしかありません。
                 ところで、ニュースを覗く度に私は、一度も星を眺めた事のない天文学者の著作を読んでいる様な、妙な気分になった覚えがあります。つまり落書きが苦役であって、真実のそれ、すなわち情熱と快楽ではないかの様に、書かれているわけです。私は、ADAMSの著：KINGSIZEを読んで、私が感じた定義は「DO IT YOUR SELF」、それで、我々が何かの表現を考えた場合には、形式と内容という古くからの問題に立ち返るわけです。しかし、特にある事柄の表現について考えるのでなければ、実際には、それは我々に与えてくれない。そこで、あの定義は敬意をもって受け入れておいて、それからその先にある物を探求する。私の場合で言えば脱構築にいたるわけです。
@@ -182,27 +182,27 @@
                 特に1964年東京オリンピックの他国の方々とのコミュニケーションが難しい当時の日本人にとって間を取り持つために、勝見勝らによって開発されたのが始まりとあり、西洋という文化と和の文化が新しいカルチャーの源流を生み出したという意味では、
                 薬になり得たいい例なのだと思われます。
         </p>
-          <p>Section ２:short story</p>
-          <p>エントロピー（落書き）＋動的平衡（精神）＝次のステップへ？
+        <p>Section ２:short story</p>
+        <p>エントロピー（落書き）＋動的平衡（精神）＝次のステップへ？
             森と都市に見る、景観の創造性は森は無作為に表現された素材を人が素晴らしいと感じる心を、都市に再構築する事で、自然が作り出した営みを人間が再構成する事で社会に
           </p>
-        </div>
-      </div>
-      <!--main-->
-      <div id="main">
-        <div class="container">
-          <div id="productNav" class="col-md-12">
-            <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
-          </div>
-        </div>
       </div>
     </div>
     <!--main-->
+    <div id="main">
+      <div class="container">
+        <div id="productNav" class="col-md-12">
+          <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--main-->
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/crime.js"></script>
-    <script src="js/tiltfx.js"></script>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/crime.js"></script>
+  <script src="js/tiltfx.js"></script>
 </body>
 </html>
