--- a/dauber.html
+++ b/dauber.html
@@ -182,10 +182,10 @@
                 特に1964年東京オリンピックの他国の方々とのコミュニケーションが難しい当時の日本人にとって間を取り持つために、勝見勝らによって開発されたのが始まりとあり、西洋という文化と和の文化が新しいカルチャーの源流を生み出したという意味では、
                 薬になり得たいい例なのだと思われます。
         </p>
-        <p>Section ２:short story</p>
+        <!--<p>Section ２:short story</p>
         <p>エントロピー（落書き）＋動的平衡（精神）＝次のステップへ？
             森と都市に見る、景観の創造性は森は無作為に表現された素材を人が素晴らしいと感じる心を、都市に再構築する事で、自然が作り出した営みを人間が再構成する事で社会に
-          </p>
+          </p>-->
       </div>
     </div>
     <!--main-->
