--- a/dauber.html
+++ b/dauber.html
@@ -132,25 +132,26 @@
               </div>
 
               <!-- Controls -->
-              <!--<a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#carousel-custom" role="button" data-slide="next">
-              <span class="sr-only">Next</span>
-            </a>-->
+              <!----><a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right carousel-control" href="#carousel-custom" role="button" data-slide="next">
+                <span class="sr-only">Next</span>
+              </a>
+              <!---->
 
 
-              <!-- Indicators start
+              <!-- Indicators start-->
               <ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
                 <li data-target="#carousel-custom" data-slide-to="0" class="active">
-                  <img src="https://i.pinimg.com/originals/15/d2/36/15d236bda4195e9c6bd8fe339393161d.jpg" alt="..." class="img-responsive center-block" height="60" width="60">
+                  <img src="https://i.pinimg.com/originals/59/31/35/593135236a7807c6e6e6341c77a9b810.png" alt="..." class="img-responsive center-block" height="60" width="60">
                 </li>
                 <li data-target="#carousel-custom" data-slide-to="1">
-                  <img src="https://i.pinimg.com/originals/07/77/3f/07773f9a7f13ad4595dcda25bbfb3fc2.jpg" alt="..." class="img-responsive center-block" height="60" width="60">
+                  <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
                 </li>
 
               </ol>
-              Indicators end-->
+              <!--Indicators end-->
             </div>
 
           </div>
