--- a/dauber.html
+++ b/dauber.html
@@ -133,10 +133,10 @@
 
               <!-- Controls -->
               <!----><a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
-                <span class="sr-only">Previous</span>
+                <span class="fas fa-arrow-left"></span>
               </a>
               <a class="right carousel-control" href="#carousel-custom" role="button" data-slide="next">
-                <span class="sr-only">Next</span>
+                <span class="fas fa-arrow-right"></span>
               </a>
               <!---->
 
