--- a/dauber.html
+++ b/dauber.html
@@ -132,11 +132,12 @@
               </div>
 
               <!-- Controls -->
-              <!----><a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
-                <span class="fas fa-arrow-left"></span>
+              <!---->
+              <a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
+                <!--<span class="fas fa-arrow-left"></span>-->
               </a>
               <a class="right carousel-control" href="#carousel-custom" role="button" data-slide="next">
-                <span class="fas fa-arrow-right"></span>
+                <!--<span class="fas fa-arrow-right"></span>-->
               </a>
               <!---->
 
