--- a/dauber.html
+++ b/dauber.html
@@ -124,10 +124,10 @@
               <!-- Wrapper for slides -->
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                  <img src="https://i.pinimg.com/originals/59/31/35/593135236a7807c6e6e6341c77a9b810.png" alt="..." class="img-responsive center-block">
+                  <img src="https://i.pinimg.com/originals/59/31/35/593135236a7807c6e6e6341c77a9b810.png" alt="..." class="img-responsive center-block" height="600" width="600">
                 </div>
                 <div class="item">
-                  <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block">
+                  <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
                 </div>
               </div>
 
