--- a/dauber.html
+++ b/dauber.html
@@ -123,7 +123,7 @@
               <!-- Wrapper for slides -->
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                  <img src="https://i.pinimg.com/originals/ef/3c/ff/ef3cff245bb495300c39949c6e3970b1.png" alt="..." class="img-responsive center-block" height="600" width="600">
+                  <img src="https://i.pinimg.com/originals/59/31/35/593135236a7807c6e6e6341c77a9b81" alt="..." class="img-responsive center-block" height="600" width="600">
                 </div>
                 <div class="item">
                   <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
@@ -144,7 +144,7 @@
               <!-- Indicators start-->
               <ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
                 <li data-target="#carousel-custom" data-slide-to="0" class="active">
-                  <img src="https://i.pinimg.com/originals/ef/3c/ff/ef3cff245bb495300c39949c6e3970b1.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                  <img src="https://i.pinimg.com/originals/59/31/35/593135236a7807c6e6e6341c77a9b81" alt="..." class="img-responsive center-block" height="60" width="60">
                 </li>
                 <li data-target="#carousel-custom" data-slide-to="1">
                   <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
