--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <header id="header">
     <div class="container">
       <div id="logo">
-        <a class="navbar-brand" href="index.html"><img src="images/geometric_pattern_animated.svg"></a>
+        <a class="navbar-brand" href="index.html">
+          <!--<img src="images/geometric_pattern_animated.svg">--></a>
       </div>
       <div class="navbar">
         <ul class="list-inline">
