--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <div class="container">
       <div id="logo">
         <a class="navbar-brand" href="index.html">
-          <img src="images/geometric_pattern_animated.svg"></a>
+          <img class="logo1" src="images/geometric_pattern_animated.svg">
+          <img class="logo2" src="a">
+
+        </a>
       </div>
       <div class="navbar">
         <ul class="list-inline">
