--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <div class="container">
       <div id="logo">
         <a class="navbar-brand" href="index.html">
-          <img class="logo1" src="images/geometric_pattern_animated.svg">
-          <img class="logo2" src="a">
+          <img src="images/geometric_pattern_animated.svg">
 
         </a>
       </div>
