--- a/dauber.html
+++ b/dauber.html
@@ -12,6 +12,10 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/v4-shims.css">
 
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Underdog&display=swap');
+  </style>
+
 </head>
 <body>
   <!-- /header -->
@@ -182,6 +186,9 @@
                 コミュニケーションの新しい形をいち早く取り入れていた事が、社会から見て一般社会に受け入れられたのだと思います。
                 特に1964年東京オリンピックの他国の方々とのコミュニケーションが難しい当時の日本人にとって間を取り持つために、勝見勝らによって開発されたのが始まりとあり、西洋という文化と和の文化が新しいカルチャーの源流を生み出したという意味では、
                 薬になり得たいい例なのだと思われます。
+
+
+
         </p>
         <!--<p>Section ２:short story</p>
         <p>エントロピー（落書き）＋動的平衡（精神）＝次のステップへ？
