--- a/project.html
+++ b/project.html
@@ -96,7 +96,7 @@
     <div class="row" style="max-width:1000px; width:100%; margin: 0 auto;">
       <a href="dauber.html">
         <div class="col-md-2">
-          <img src="https://i.pinimg.com/originals/9a/18/6f/9a186f49ad4ebf0e63e0e69036907ed7.png" class="img-responsive center-block">
+          <img src="https://i.pinimg.com/originals/de/24/39/de2439a8124f893363ba5eba855e039a.jpg" class="img-responsive center-block">
 
           <h2 style="font-size: 12px;">DauberSide</h2>
           <p>Dauberという単語:下手な絵を書く人、塗る人、塗り道具
