--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
       </div>
       <div class="navbar">
         <ul class="list-inline">
-          <li class="folder"><a href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>menu</span></a>
-            <!--<div class="dropdown-menu folder-child-wrapper">
+          <!--<li class="folder"><a href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>menu</span></a>
+            <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
                 　<li><a class="dropdown-item" href="index.html">
                     <p class="fas fa-home">home</p></a></li>
                 <li><a class="dropdown-item" href="project.html">
-                    <p class="fas fa-umbrella">project</p></a></li>-->
-            <!--<li><a class="dropdown-item" href="#">Another action</a><li>-->
-            <!--</ul>-->
-      </div>
-      </li>
-      <li><a href="https://www.instagram.com/DauberSide/"><span class="fab fa-instagram"></span><a></li>
-      <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="far fa-envelope"></span></a></li>
+                    <p class="fas fa-umbrella">project</p></a></li>
+                <!--<li><a class="dropdown-item" href="#">Another action</a><li>-->
+          <!--</ul>
+            </div>
+          </li>-->
+          <li><a href="https://www.instagram.com/DauberSide/"><span class="fab fa-instagram"></span><a></li>
+          <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="far fa-envelope"></span></a></li>
 
-      <!--<li></li>-->
-      </ul>
-    </div>
+          <!--<li></li>-->
+        </ul>
+      </div>
     </div>
   </header>
   <!-- /header -->
@@ -103,11 +103,11 @@
     <div class="col-lg-12"></div>
     <!-- Example row of columns -->
     <div class="row" style="max-width:1000px; width:100%; margin: 0 auto;">
-      <a href="dauber.html">
-        <div class="col-md-12">
-          <img src="https://i.pinimg.com/originals/90/06/c6/9006c674363dd5df9f8b887ff98b3bf2.jpg" class="img-responsive center-block">
-        </div>
-      </a>
+      <!--<a href="dauber.html">-->
+      <div class="col-md-12">
+        <img src="https://i.pinimg.com/originals/90/06/c6/9006c674363dd5df9f8b887ff98b3bf2.jpg" class="img-responsive center-block">
+      </div>
+      <!--</a>-->
     </div>
   </div>
   <!--main-->
