--- a/index.html
+++ b/index.html
@@ -102,11 +102,13 @@
   <div id="main" class="container">
     <div class="col-lg-12"></div>
     <!-- Example row of columns -->
-    <!--<a href="dauber.html">-->
-    <div class="col-md-12">
-      <img src="https://i.pinimg.com/originals/d1/45/ee/d145eea8b5cc13d6a4ee58ee11468b9c.png" class="img-responsive center-block">
+    <div class="row" style="max-width:1000px; width:100%; margin: 0 auto;">
+      <!--<a href="dauber.html">-->
+      <div class="col-md-12">
+        <img src="https://i.pinimg.com/originals/90/06/c6/9006c674363dd5df9f8b887ff98b3bf2.jpg" class="img-responsive center-block">
+      </div>
+      <!--</a>-->
     </div>
-    <!--</a>-->
   </div>
   <!--main-->
 
