--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <div id="main">
     <div class="container">
       <div id="productNav" class="col-md-12">
-        <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z/view?usp=sharing"><span class="back-arrow">←</span> Dauber Date </a>
+        <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z/"><span class="back-arrow">←</span> Dauber Date </a>
       </div>
     </div>
   </div>
