--- a/index.html
+++ b/index.html
@@ -37,17 +37,18 @@
       </div>
       <div class="navbar">
         <ul class="list-inline">
-          <!--<li class="folder"><a href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>menu</span></a>
+          <li class="folder"><a href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>menu</span></a>
             <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
                 　<li><a class="dropdown-item" href="index.html">
                     <p class="fas fa-home">home</p></a></li>
                 <li><a class="dropdown-item" href="project.html">
                     <p class="fas fa-umbrella">project</p></a></li>
-                <!--<li><a class="dropdown-item" href="#">Another action</a><li>-->
-          <!--</ul>
+                <!--<li><a class="dropdown-item" href="#">Another action</a>-->
+                <li>
+              </ul>
             </div>
-          </li>-->
+          </li>
           <li><a href="https://www.instagram.com/DauberSide/"><span class="fab fa-instagram"></span><a></li>
           <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="far fa-envelope"></span></a></li>
 
