--- a/project.html
+++ b/project.html
@@ -96,7 +96,7 @@
     <div class="row" style="max-width:1000px; width:100%; margin: 0 auto;">
       <a href="dauber.html">
         <div class="col-md-2">
-          <img src="t.ly/BDut" class="img-responsive center-block">
+          <img src="https://i.pinimg.com/originals/90/06/c6/9006c674363dd5df9f8b887ff98b3bf2.jpg" class="img-responsive center-block">
 
           <h2 style="font-size: 12px;">DauberSide</h2>
           <p>Dauberという単語:下手な絵を書く人、塗る人、塗り道具
