--- a/dauber.html
+++ b/dauber.html
@@ -115,7 +115,7 @@
               <p>
                 私はこの東国に生き、私を知っている人間が、ある定められた回数だけ私を眺め、私は消えていく。
                 しかし世界のからくりは、獣の単純な心にとってはあまりにも複雑に描写される。
-                私は焦点を絞った。薄暗いモヤモヤと映る夢、何世代もの人間が、ありふれた、そしてある意味では永遠に変わらぬ、営みの素材となるべき運命の塗布具。</p>
+                私は焦点を絞った。薄暗いモヤモヤと映る夢、何世代もの人間が、ありふれた、そしてある意味では永遠に変わらぬ、営みの素材となるべき塗布具。</p>
               <p>
                 それは一人の人間の夢に過ぎない、しかし万人の記憶の一部となる。
               </p>
@@ -171,7 +171,7 @@
         <p>Section 1: The Mystery of Graffiti</p>
         <p>
                 まず最初に、私から何を期待すべきか、いやむしろ、何を期待すべきでないか、はっきり申し上げておきたいと思います。落書きという謎は題目そのままで謎にあります。 したがって皆さんは、肝心なのは「謎」であるとお取りになるかもしれない。あるいは、一層悪い事に、その謎の正解をどうやら見つけたと、私が勝手にそう思い込んでいるとお取りになるかもしれない。 実際には、皆さんにお教えする様な事は、私には何もありません。
-                私はこれまで落書きを肌で感じ、腑分けし、落書きを（もしくは書こうと試み）、楽しんでもきました。そしてこの最後の行為こそが、何よりも大切な事である事を悟りました。「落書きを汲む」。これこそが私の得た、いわゆる最終的な結論です。事実、街にある空白を前にする度に私は、落書きを再発見するもの、という気がしています。 過去は何も役に立ちません。したがって私は、すでに申し上げた通り、自分の抱えている迷いを皆さんにご披露するだけなのです。この生涯の大半を落書きに捧げてきましたが、皆さんにお伝えできるのは様々な疑問でしかありません。
+                私はこれまで落書きを肌で感じ、腑分けし、落書きを（もしくは書こうと試み）、楽しんでもきました。そしてこの最後の行為こそが、何よりも大切な事である事を悟りました。「落書きを汲む」。これこそが私の得た、いわゆる最終的な結論です。事実、街にある空白を前にする度に私は、落書きを再発見するもの、という気がしています。 過去は何も役に立ちません。したがって私は、すでに申し上げた通り、自分の抱えている迷いを皆さんにご披露するだけなのです。東京という街並みに存在する落書きを観察してきましたが、皆さんにお伝えできるのは様々な疑問でしかありません。
                 ところで、ニュースを覗く度に私は、一度も星を眺めた事のない天文学者の著作を読んでいる様な、妙な気分になった覚えがあります。つまり落書きが苦役であって、真実のそれ、すなわち情熱と快楽ではないかの様に、書かれているわけです。私は、ADAMSの著：KINGSIZEを読んで、私が感じた定義は「DO IT YOUR SELF」、それで、我々が何かの表現を考えた場合には、形式と内容という古くからの問題に立ち返るわけです。しかし、特にある事柄の表現について考えるのでなければ、実際には、それは我々に与えてくれない。そこで、あの定義は敬意をもって受け入れておいて、それからその先にある物を探求する。私の場合で言えば脱構築にいたるわけです。
                 そしてつねに新たな意味を獲得していく、落書きは、ことさら風変わりな何物かではない。いずれ分かりますが、落書きは都会という場所で待ち伏せています。いつ何時、我々の目の前に現れるやもしれないのです。ところで、これはよく起こる事ですが、我々はある思い違いをします。例えば落書きという行為そのものが即、破壊行為であると、それは思い違いです。そのものがなんであるかを知るきっかけでしかありません。
 
@@ -179,7 +179,7 @@
                 ベールに包まれた魅力は時に毒にもなりますが、薬にもなり得ます。
 
                 特に誰かに伝達するという形式を取らずに、作品もしくは落書きがその場所に停滞する。
-                その停滞している間、作品は夢のように現れ、夢のように消えて観客の中にしか残らない。
+                その停滞している間、落書きは夢のように現れ、夢のように消えて観客の中にしか残らない。
                 ちょうど例として、
                 私の記憶が正しければ代表的な人物として挙げるとキースヘリングだと思われます。
                 理由として、ピクトグラムという言語を活用し、夢の様に消えるという考え方にチョークを活用していたという事、
@@ -190,10 +190,24 @@
 
 
         </p>
-        <!--<p>Section ２:short story</p>
-        <p>エントロピー（落書き）＋動的平衡（精神）＝次のステップへ？
-            森と都市に見る、景観の創造性は森は無作為に表現された素材を人が素晴らしいと感じる心を、都市に再構築する事で、自然が作り出した営みを人間が再構成する事で社会に
-          </p>-->
+        <p>Section2 Applicator of MAKERS</p>
+        <p>
+            私の知る限り、塗布具は誰もが使う品物かと問われると、ある限られた人が製品を購入し役割を追えた後、気を止めないで捨ててしまう事は明白なのである。
+            私という個人は、塗布具とされる容器に取り付けられたdauberという製品を知ることで、どのように塗布具としての機能が出来上がったのか気になり調べる事にした。出来上がったのは1913年”Smith David W”によって考案がされる。構造上、1913年代では金属のバネによる、初期の原型が出来上がり
+            塗布する面が支持体へと筆圧が加わる事で塗料が流れ出るという仕組みとなっている。
+            存在が出来上がってから間が空き、1963年に円錐型の突起箇所に鉄製のバネを装着する事で本来の形状となった。
+            １９０７年代に合成樹脂が開発されていたが後５０年という空白を辿りdauberと合成樹脂が組み合わさった物が、
+            その翌年1964年に発泡ゴムなどの多孔性の弾性材料を使用したDauerが開発され今の形状に至る。
+            およそ１９８０年代、落書きという文化が活発に形成されると共に街での競い合いが転じてDauberが活用されているという背景が存在する。
+            落書きと塗布具という関係性は書くという行為に付属される為、その当時どの段階でdauberを利用していたかという記述は今の所見当たらない。
+            しかし私の知る限り、2000年代からは活用していたと思われる。
+
+            時代背景は現代に移りネットワーク社会という枠組みは検索ワードを知る事で力学から造形とどのように作られるのかという基本的な内容をネットを通して瞬時に垣間見れる様になり、今回の検索ワードは”MAKERS”という概念を知る事で知識としての共有が可能なのである。
+
+            即効性の情報という空洞だらけのまやかしは人に簡素な叡智を与え、新しい物づくりの入り口を設けたのである。
+            新素材ができて進化の過程を見ていくと50年という歳月によって形状が緩やかに形作られたが、余談としてどの様にデジタルという第３の産業革命は荒波を超えていくのか疑問なのである。
+
+        </p>
       </div>
     </div>
     <!--main-->
