--- a/dauber.html
+++ b/dauber.html
@@ -193,20 +193,15 @@
         <p>Section2 Applicator of MAKERS</p>
         <p>
             私の知る限り、塗布具は誰もが使う品物かと問われると、ある限られた人が製品を購入し役割を追えた後、気を止めないで捨ててしまう事は明白なのである。
-            私という個人は、塗布具とされる容器に取り付けられたdauberという製品を知ることで、どのように塗布具としての機能が出来上がったのか気になり調べる事にした。出来上がったのは1913年”Smith David W”によって考案がされる。構造上、1913年代では金属のバネによる、初期の原型が出来上がり
-            塗布する面が支持体へと筆圧が加わる事で塗料が流れ出るという仕組みとなっている。
-            存在が出来上がってから間が空き、1963年に円錐型の突起箇所に鉄製のバネを装着する事で本来の形状となった。
-            １９０７年代に合成樹脂が開発されていたが後５０年という空白を辿りdauberと合成樹脂が組み合わさった物が、
-            その翌年1964年に発泡ゴムなどの多孔性の弾性材料を使用したDauerが開発され今の形状に至る。
+            私という個人は、塗布具とされる容器に取り付けられたDauberという製品を知ることで、どのようにDauberとしての機能が出来上がったのか気になり調べる事にした。出来上がったのは1913年”Smith David W”によって考案がされる。構造上、1913年代では金属のバネにより、初期の原型とされ。
+            原型が出来上がってから間が空き、1964年に発泡ゴムなどの多孔性の弾性材料を使用したDauerが開発され今の形状に至る。
+            その際に１９０７年代に合成樹脂が開発されていたが後５０年という空白を辿りDauberと合成樹脂が組み合わさった。
+
             およそ１９８０年代、落書きという文化が活発に形成されると共に街での競い合いが転じてDauberが活用されているという背景が存在する。
-            落書きと塗布具という関係性は書くという行為に付属される為、その当時どの段階でdauberを利用していたかという記述は今の所見当たらない。
-            しかし私の知る限り、2000年代からは活用していたと思われる。
+            落書きと塗布具という関係性は書くという行為に付属される為、その当時どの段階でDauberを利用していたかという記述は今の所見当たらない。
+            しかし私の知る限り、2000年代に入りKRINKによってDauerという塗布具の日の目を見たと、私は記憶している。
 
             時代背景は現代に移りネットワーク社会という枠組みは検索ワードを知る事で力学から造形とどのように作られるのかという基本的な内容をネットを通して瞬時に垣間見れる様になり、今回の検索ワードは”MAKERS”という概念を知る事で知識としての共有が可能なのである。
-
-            即効性の情報という空洞だらけのまやかしは人に簡素な叡智を与え、新しい物づくりの入り口を設けたのである。
-            新素材ができて進化の過程を見ていくと50年という歳月によって形状が緩やかに形作られたが、余談としてどの様にデジタルという第３の産業革命は荒波を超えていくのか疑問なのである。
-
         </p>
       </div>
     </div>
