--- a/dauber.html
+++ b/dauber.html
@@ -194,8 +194,7 @@
         <p>
             私の知る限り、塗布具は誰もが使う品物かと問われると、ある限られた人が製品を購入し役割を追えた後、気を止めないで捨ててしまう事は明白なのである。
             私という個人は、塗布具とされる容器に取り付けられたDauberという製品を知ることで、どのようにDauberとしての機能が出来上がったのか気になり調べる事にした。
-            原型の初期段階は、1913年”Smith David W”によって考案がされる。1913年代では円錐形の形状から金属のバネを利用して形状が形成されている。
-            原型が出来上がってから間が空き、1964年に発泡ゴムなどの多孔性の弾性材料を使用したDauerが開発され今の形状に至る。
+            原型の初期段階は、1913年”Smith David W”によって考案がされる。構造上、1913年代では金属のバネが、初期の原型とされ。 原型が出来上がってから間が空き、1964年に発泡ゴムなどの多孔性の弾性材料を使用したDauerが開発され今の形状に至る。
             その際に１９０７年代に合成樹脂が開発されていたが後５０年という空白を辿りDauberと合成樹脂が組み合わさった。
 
             およそ１９８０年代、落書きという文化が活発に形成されると共に街での競い合いが転じてDauberが活用されているという背景が存在する。
