--- a/dauber.html
+++ b/dauber.html
@@ -119,6 +119,22 @@
               <p>
                 それは一人の人間の夢に過ぎない、しかし万人の記憶の一部となる。
               </p>
+              <p>
+                2004年SwedenのA5pressからKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
+                これは私が知る限り唯一、DIYマーカー自体とその背景について記録された書籍である。
+                DIYマーカーとはグラフィティを行うライターたちがストリートでタギングのオリジナリティを競うとき必ず使用されるツールで、
+                彼らは既存のペンやマーカーの改造、靴磨きや車用のポリッシャーのような別用途である製品の流用、自己制作等を行い、それぞれにとって最良のマーカーを作るという行為を常に行ってきた。
+
+                イギリスから生まれ、1970年代に北米を中心に広がりを見せたDIYムーブメントと
+                時を同じくしてニューヨークで生まれたグラフィティにとってこうした流れはごく自然なことであった。
+                だがこうした技術や資料は、グラフィティの広がるスピードとは反対に、匿名性やクルー(家族団体)というグラフィティがもつ性質によって、一部の共同体の中でしかシェアされることがなかったため、インターネットが普及する近年まで書籍や情報として全体に共有されることが少なかった非常に少なかった。
+
+                Kingsizeは、その書籍の名のごとく大きなマーカーで、当時としては見ることがなかったであろう50mmの太さのマーカーの開発をしていく過程と、世界で活躍するライターたちに配布して実際に使用しているアクションを記録したもの。そしてadamsの序文、NYで初期にグラフィティライターの青年たちへのインタビューを行い書籍[getting up]を著したCraig Castlemanによる文章、世界大戦後グローバリズムが進む中で世界中にアメリカニゼーションが浸透していく様子と、その影響を受けるスウェーデン社会を捉えたAndreas Bergの論述で構成されていた。
+                先にも述べたように匿名性やクルーという性質を持つグラフィティカルチャーは、しばしばその細かな流れや背景等が、記録からもれ抜け落ちてしまうことが多い。その意味で世界のグローバリズムの中でグラフィティがNewYorkで広がっていく風景と、その後世界中に広がったていった背景、スウェーデン1国の背景や流れを後世に残る形でドキュメントしていたこの書籍の役割は大きい。
+
+                ではkingsizeが出版されてから16年が経過した今、路上で活動を続けるライターたちにとってのDIYマーカーやツール、それだけでなくgraffitiはどう変化したのだろうか、このプロジェクトではkingsizeを参照としながら、現代とりわけ2010年代以降のデジタルテクノロジーの発展とともに発生したメーカーズムーブメント的手法をもとに3Dソフトによるモデリングから、ソーシャルネットワーキングによる情報共有、拡散を行い、現代におけるDIYマーカーのあり方を探る。
+
+              </p>
             </div>
           </div>
           <!--carousel-custom-->
@@ -186,22 +202,19 @@
                 コミュニケーションの新しい形をいち早く取り入れていた事が、社会から見て一般社会に受け入れられたのだと思います。
                 特に1964年東京オリンピックの他国の方々とのコミュニケーションが難しい当時の日本人にとって間を取り持つために、勝見勝らによって開発されたのが始まりとあり、西洋という文化と和の文化が新しいカルチャーの源流を生み出したという意味では、
                 薬になり得たいい例なのだと思われます。
-
-
-
         </p>
         <p>Section2 Applicator of MAKERS</p>
         <p>
             私の知る限り、塗布具は誰もが使う品物かと問われると、ある限られた人が製品を購入し役割を追えた後、気を止めないで捨ててしまう事は明白なのである。
-            私という個人は、塗布具とされる容器に取り付けられたDauberという製品を知ることで、どのようにDauberとしての機能が出来上がったのか気になり調べる事にした。
-            原型の初期段階は、1913年”Smith David W”によって考案がされる。構造上、1913年代では金属のバネが、初期の原型とされ。 原型が出来上がってから間が空き、1964年に発泡ゴムなどの多孔性の弾性材料を使用したDauerが開発され今の形状に至る。
+            私という個人は、塗布具とされる容器に取り付けられたDauberという製品を探ることで、どのようにDauberとしての機能が出来上がったのか気になり調べる事にした。
+            原型の初期段階は、1913年”Smith David W”によって特許への考案がされる。構造上、1913年代では金属のバネが、初期の原型とされ。 原型が出来上がってから間が空き、1964年に発泡ゴムなどの多孔性の弾性材料を使用したDauberが製造され今の形状に至る。
             その際に１９０７年代に合成樹脂が開発されていたが後５０年という空白を辿りDauberと合成樹脂が組み合わさった。
 
             およそ１９８０年代、落書きという文化が活発に形成されると共に街での競い合いが転じてDauberが活用されているという背景が存在する。
             落書きと塗布具という関係性は書くという行為に付属される為、その当時どの段階でDauberを利用していたかという記述は今の所見当たらない。
-            しかし私の知る限り、2000年代に入りKRINKによってDauerという塗布具の日の目を見たと、私は記憶している。
-
+            しかし私の知る限り、2000年代に入りKRINKによってDauerという塗布具が日の目を見たと、私は記憶している。
             時代背景は現代に移りネットワーク社会という枠組みは検索ワードを知る事で力学から造形とどのように作られるのかという基本的な内容をネットを通して瞬時に垣間見れる様になり、今回の検索ワードは”MAKERS”という概念を知る事で知識としての共有が可能なのである。
+
         </p>
       </div>
     </div>
