--- a/dauber.html
+++ b/dauber.html
@@ -177,7 +177,7 @@
 
         イギリスから生まれ、1970年代に北米を中心に広がりを見せたDIYムーブメントと
         時を同じくしてニューヨークで生まれたグラフィティにとってこうした流れはごく自然なことであった。
-        だがこうした技術や資料は、グラフィティの広がるスピードとは反対に、匿名性やクルー(家族団体)というグラフィティがもつ性質によって、一部の共同体の中でしかシェアされることがなかったため、インターネットが普及する近年まで書籍や情報として全体に共有されることが少なかった非常に少なかった。
+        だがこうした技術や資料は、グラフィティの広がるスピードとは反対に、匿名性やクルー(家族団体)というグラフィティがもつ性質によって、一部の共同体の中でしかシェアされることがなかったため、インターネットが普及する近年まで書籍や情報として全体に共有されることが非常に少なかった。
 
         Kingsizeは、その書籍の名のごとく大きなマーカーで、当時としては見ることがなかったであろう50mmの太さのマーカーの開発をしていく過程と、世界で活躍するライターたちに配布して実際に使用しているアクションを記録したもの。そしてadamsの序文、NYで初期にグラフィティライターの青年たちへのインタビューを行い書籍[getting up]を著したCraig Castlemanによる文章、世界大戦後グローバリズムが進む中で世界中にアメリカニゼーションが浸透していく様子と、その影響を受けるスウェーデン社会を捉えたAndreas Bergの論述で構成されていた。
         先にも述べたように匿名性やクルーという性質を持つグラフィティカルチャーは、しばしばその細かな流れや背景等が、記録からもれ抜け落ちてしまうことが多い。その意味で世界のグローバリズムの中でグラフィティがNewYorkで広がっていく風景と、その後世界中に広がったていった背景、スウェーデン1国の背景や流れを後世に残る形でドキュメントしていたこの書籍の役割は大きい。
@@ -213,8 +213,8 @@
 
             およそ１９８０年代、落書きという文化が活発に形成されると共に街での競い合いが転じてDauberが活用されているという背景が存在する。
             落書きと塗布具という関係性は書くという行為に付属される為、その当時どの段階でDauberを利用していたかという記述は今の所見当たらない。
-            しかし私の知る限り、2000年代に入りKRINKによってDauerという塗布具が日の目を見たと、私は記憶している。
-            時代背景は現代に移りネットワーク社会という枠組みは検索ワードを知る事で力学から造形とどのように作られるのかという基本的な内容をネットを通して瞬時に垣間見れる様になり、今回の検索ワードは”MAKERS”という概念を知る事で知識としての共有が可能なのである。
+            しかし私の知る限り、2000年代に入りKRINKによってDauberという塗布具が日の目を見たと、私は記憶している。
+            時代背景は現代に移りネットワーク社会という枠組みは検索ワードを知る事で力学から造形とどのように作られるのかという基本的な内容をネットを通して瞬時に垣間見れる様になり、今回の検索ワードは”MAKERS”という概念を知る事で知識としての入り口となのである。
 
         </p>
       </div>
