--- a/dauber.html
+++ b/dauber.html
@@ -169,22 +169,6 @@
   <div id="main02">
     <div class="container">
       <div class="col-md-12">
-        <p>
-        2004年SwedenのA5pressからKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
-        これは私が知る限り唯一、DIYマーカー自体とその背景について記録された書籍である。
-        DIYマーカーとはグラフィティを行うライターたちがストリートでタギングのオリジナリティを競うとき必ず使用されるツールで、
-        彼らは既存のペンやマーカーの改造、靴磨きや車用のポリッシャーのような別用途である製品の流用、自己制作等を行い、それぞれにとって最良のマーカーを作るという行為を常に行ってきた。
-
-        イギリスから生まれ、1970年代に北米を中心に広がりを見せたDIYムーブメントと
-        時を同じくしてニューヨークで生まれたグラフィティにとってこうした流れはごく自然なことであった。
-        だがこうした技術や資料は、グラフィティの広がるスピードとは反対に、匿名性やクルー(家族団体)というグラフィティがもつ性質によって、一部の共同体の中でしかシェアされることがなかったため、インターネットが普及する近年まで書籍や情報として全体に共有されることが非常に少なかった。
-
-        Kingsizeは、その書籍の名のごとく大きなマーカーで、当時としては見ることがなかったであろう50mmの太さのマーカーの開発をしていく過程と、世界で活躍するライターたちに配布して実際に使用しているアクションを記録したもの。そしてadamsの序文、NYで初期にグラフィティライターの青年たちへのインタビューを行い書籍[getting up]を著したCraig Castlemanによる文章、世界大戦後グローバリズムが進む中で世界中にアメリカニゼーションが浸透していく様子と、その影響を受けるスウェーデン社会を捉えたAndreas Bergの論述で構成されていた。
-        先にも述べたように匿名性やクルーという性質を持つグラフィティカルチャーは、しばしばその細かな流れや背景等が、記録からもれ抜け落ちてしまうことが多い。その意味で世界のグローバリズムの中でグラフィティがNewYorkで広がっていく風景と、その後世界中に広がったていった背景、スウェーデン1国の背景や流れを後世に残る形でドキュメントしていたこの書籍の役割は大きい。
-
-        ではkingsizeが出版されてから16年が経過した今、路上で活動を続けるライターたちにとってのDIYマーカーやツール、それだけでなくgraffitiはどう変化したのだろうか、このプロジェクトではkingsizeを参照としながら、現代とりわけ2010年代以降のデジタルテクノロジーの発展とともに発生したメーカーズムーブメント的手法をもとに3Dソフトによるモデリングから、ソーシャルネットワーキングによる情報共有、拡散を行い、現代におけるDIYマーカーのあり方を探る。
-
-        </p>
         <p>Section 1: The Mystery of Graffiti</p>
         <p>
                 まず最初に、私から何を期待すべきか、いやむしろ、何を期待すべきでないか、はっきり申し上げておきたいと思います。落書きという謎は題目そのままで謎にあります。 したがって皆さんは、肝心なのは「謎」であるとお取りになるかもしれない。あるいは、一層悪い事に、その謎の正解をどうやら見つけたと、私が勝手にそう思い込んでいるとお取りになるかもしれない。 実際には、皆さんにお教えする様な事は、私には何もありません。
@@ -211,10 +195,13 @@
             原型の初期段階は、1913年”Smith David W”によって特許への考案がされる。構造上、1913年代では金属のバネが、初期の原型とされ。 原型が出来上がってから間が空き、1964年に発泡ゴムなどの多孔性の弾性材料を使用したDauberが製造され今の形状に至る。
             その際に１９０７年代に合成樹脂が開発されていたが後５０年という空白を辿りDauberと合成樹脂が組み合わさった。
 
-            およそ１９８０年代、落書きという文化が活発に形成されると共に街での競い合いが転じてDauberが活用されているという背景が存在する。
-            落書きと塗布具という関係性は書くという行為に付属される為、その当時どの段階でDauberを利用していたかという記述は今の所見当たらない。
-            しかし私の知る限り、2000年代に入りKRINKによってDauberという塗布具が日の目を見たと、私は記憶している。
-            時代背景は現代に移りネットワーク社会という枠組みは検索ワードを知る事で力学から造形とどのように作られるのかという基本的な内容をネットを通して瞬時に垣間見れる様になり、今回の検索ワードは”MAKERS”という概念を知る事で知識としての入り口となのである。
+            およそ１９８０年代から現代までに、落書きという文化が活発に形成され、街での描く行為にDauberという塗布具が活用されているという背景が存在する。
+            落書きと塗布具という関係性は描くという行為に付属される為、その当時どの段階でDauberを利用していたかという記述は今の所、見当たらないが、
+            私の知る限り、2000年代に入りDauberという塗布具が日の目を見たと、私は記憶している。
+            時代背景は現代に移りネットワーク社会という枠組みは概念を取り纏められた単語を検索する事で力学から造形とどのように作られるのかという基本的な内容をネットを通して瞬時に垣間見れる様になり、今回の検索ワードは”MAKERS”という概念を知る事で知識としての入り口が突如として押し広げられるのだ。
+            ”MAKERS”電子機器による製造方法の拡張、現状日本では、2010年代の記憶を掘り起こすと拳銃などの製造ができるというニュースが飛び交い、それが事実、作るという工程に壁を設けられたのである。３Dプリンターへの関心が世間一般と世界から見た場合との差異が特に激しい。落書きという文化と同じく前例が犯罪に焦点を合わせてしまったがために、３Dプリンター＝犯罪予備軍とされる雰囲気がある。
+            しかし落書きのカルチャーと同じく創作するという行為は創造性を押し広げるという可能性を秘めている、なのでMAKERSという概念から３Dプリンターで何ができるかという事を学ぶ事で、私は製造過程を縮小する事が可能となり、その他の準備工程を大幅に中抜きする事が可能だと理解した。
+
 
         </p>
       </div>
