--- a/dauber.html
+++ b/dauber.html
@@ -104,10 +104,8 @@
     <div id="main02">
       <div class="container">
         <div id="productNav" class="col-md-12">
-          <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" onClick="_gaq.push(['_trackEvent','download','click','1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z']);"><span class="back-arrow"></span> Dauber Data Download </a>
+          <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z"><span class="back-arrow"></span> Dauber Data Download </a>
         </div>
-      </div>
-      <div class="container">
         <div class="col-md-12">
           <div class="col-md-6">
             <h1>DauberSide</h1>
