--- a/dauber.html
+++ b/dauber.html
@@ -203,7 +203,8 @@
             私の知る限り、2000年代に入りDauberという塗布具が日の目を見たと、私は記憶している。
             時代背景は現代に移りネットワーク社会という枠組みは概念を取り纏められた単語を検索する事で力学から造形とどのように作られるのかという基本的な内容をネットを通して瞬時に垣間見れる様になり、今回の検索ワードは”MAKERS”という概念を知る事で知識としての入り口が突如として押し広げられるのだ。
             ”MAKERS”電子機器による製造方法の拡張、現状日本では、2010年代の記憶を掘り起こすと拳銃などの製造ができるというニュースが飛び交い、それが事実、作るという工程に壁を設けられたのである。３Dプリンターへの関心が世間一般と世界から見た場合との差異が特に激しい。落書きという文化と同じく前例が犯罪に焦点を合わせてしまったがために、３Dプリンター＝犯罪予備軍とされる雰囲気がある。
-            しかし落書きのカルチャーと同じく創作するという行為は創造性を押し広げるという可能性を秘めている、なのでMAKERSという概念から３Dプリンターで何ができるかという事を学ぶ事で、私は製造過程を縮小する事が可能となり、その他の準備工程を大幅に中抜きする事が可能だと理解した。
+            しかし落書きのカルチャーと同じく創作するという行為は創造性を押し広げるという可能性を秘めている、なのでMAKERSという概念から３Dプリンターで何ができるかという事を学ぶ事で、私は製造過程を縮小する事が可能となり、その他の準備工程に時間を作る事が可能だと理解した。
+
 
 
         </p>
