--- a/dauber.html
+++ b/dauber.html
@@ -134,7 +134,7 @@
                 <div class="item">
                   <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
                 </div>
-                <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z"><span class="back-arrow"></span> Dauber Data Download </a>
+                <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z"><span class="back-arrow"></span> Dauber STL Data</a>
               </div>
 
               <!-- Controls -->
@@ -174,38 +174,36 @@
       <div class="col-md-12">
         <p>Section 1: The Mystery of Graffiti</p>
         <p>
-                まず最初に、私から何を期待すべきか、いやむしろ、何を期待すべきでないか、はっきり申し上げておきたいと思います。落書きという謎は題目そのままで謎にあります。 したがって皆さんは、肝心なのは「謎」であるとお取りになるかもしれない。あるいは、一層悪い事に、その謎の正解をどうやら見つけたと、私が勝手にそう思い込んでいるとお取りになるかもしれない。 実際には、皆さんにお教えする様な事は、私には何もありません。
-                私はこれまで落書きを肌で感じ、腑分けし、落書きを（もしくは書こうと試み）、楽しんでもきました。そしてこの最後の行為こそが、何よりも大切な事である事を悟りました。「落書きを汲む」。これこそが私の得た、いわゆる最終的な結論です。事実、街にある空白を前にする度に私は、落書きを再発見するもの、という気がしています。 過去は何も役に立ちません。したがって私は、すでに申し上げた通り、自分の抱えている迷いを皆さんにご披露するだけなのです。東京という街並みに存在する落書きを観察してきましたが、皆さんにお伝えできるのは様々な疑問でしかありません。
-                ところで、ニュースを覗く度に私は、一度も星を眺めた事のない天文学者の著作を読んでいる様な、妙な気分になった覚えがあります。つまり落書きが苦役であって、真実のそれ、すなわち情熱と快楽ではないかの様に、書かれているわけです。私は、ADAMSの著：KINGSIZEを読んで、私が感じた定義は「DO IT YOUR SELF」、それで、我々が何かの表現を考えた場合には、形式と内容という古くからの問題に立ち返るわけです。しかし、特にある事柄の表現について考えるのでなければ、実際には、それは我々に与えてくれない。そこで、あの定義は敬意をもって受け入れておいて、それからその先にある物を探求する。私の場合で言えば脱構築にいたるわけです。
-                そしてつねに新たな意味を獲得していく、落書きは、ことさら風変わりな何物かではない。いずれ分かりますが、落書きは都会という場所で待ち伏せています。いつ何時、我々の目の前に現れるやもしれないのです。ところで、これはよく起こる事ですが、我々はある思い違いをします。例えば落書きという行為そのものが即、破壊行為であると、それは思い違いです。そのものがなんであるかを知るきっかけでしかありません。
+            まず最初に、私から何を期待すべきか、いやむしろ、何を期待すべきでないか、はっきり申し上げておきたいと思います。落書きという謎は題目そのままで謎にあります。 したがって皆さんは、肝心なのは「謎」であるとお取りになるかもしれない。あるいは、一層悪い事に、その謎の正解をどうやら見つけたと、私が勝手にそう思い込んでいるとお取りになるかもしれない。 実際には、皆さんにお教えする様な事は、私には何もありません。
+            私はこれまで落書きを肌で感じ、腑分けし、落書きを（もしくは書こうと試み）、楽しんでもきました。そしてこの最後の行為こそが、何よりも大切な事である事を悟りました。「落書きを汲む」。これこそが私の得た、いわゆる最終的な結論です。事実、街にある空白を前にする度に私は、落書きを再発見するもの、という気がしています。 落書きは過去によって成立しています。したがって私は、自分の抱えている葛藤を皆さんにご披露するだけなのです。東京という街並みに存在する落書きを観察してきましたが、皆さんにお伝えできるのは繋がりでしかありません。
+            ところで、ニュースを覗く度に私は、星に熟知した天文学者の著作を読んでいる様な、妙な気分になった覚えがありますが。つまり落書きに対して寛容な意見があって、真実のそれは、すなわち情熱がある様に、書かれているわけです。不思議な事に一般人よりも学者さんが援護をしている訳です。私は、ADAMSの著：KINGSIZEを読んで、私が感じた定義は「DO IT YOUR SELF」、それで、我々が何かの表現を考えた場合には、形式と内容という古くからの問題に立ち返るわけです。しかし、特にある事柄の表現について考えるのでなければ、実際には、それは我々に与えてくれない。そこで、あの定義は敬意をもって受け入れておいて、それからその先にある物を探求する。私の場合で言えば脱構築にいたるわけです。
+            そしてつねに新たな意味を獲得していく、落書きは、ことさら風変わりな何物かではない。いずれ分かりますが、落書きは都会という場所で待ち伏せています。いつ何時、我々の目の前に現れるやもしれないのです。ところで、これはよく起こる事ですが、我々はある思い違いをします。例えば落書きという行為そのものが即、破壊行為であると、それは思い違いです。そのものがなんであるかを知るきっかけでしかありません。
 
-                私がなぜこの落書きという謎に惹きつけられたのかという疑問を紐解くと、無言の蓄積なのだと思います。
-                ベールに包まれた魅力は時に毒にもなりますが、薬にもなり得ます。
 
-                特に誰かに伝達するという形式を取らずに、作品もしくは落書きがその場所に停滞する。
-                その停滞している間、落書きは夢のように現れ、夢のように消えて観客の中にしか残らない。
-                ちょうど例として、
-                私の記憶が正しければ代表的な人物として挙げるとキースヘリングだと思われます。
-                理由として、ピクトグラムという言語を活用し、夢の様に消えるという考え方にチョークを活用していたという事、
-                コミュニケーションの新しい形をいち早く取り入れていた事が、社会から見て一般社会に受け入れられたのだと思います。
-                特に1964年東京オリンピックの他国の方々とのコミュニケーションが難しい当時の日本人にとって間を取り持つために、勝見勝らによって開発されたのが始まりとあり、西洋という文化と和の文化が新しいカルチャーの源流を生み出したという意味では、
-                薬になり得たいい例なのだと思われます。
+            私がなぜこの落書きという謎に惹きつけられたのかという疑問を紐解くと、無言の蓄積なのだと思います。
+            ベールに包まれた魅力は時に毒にもなりますが、薬にもなり得ます。
+
+            特に誰かに伝達するという形式を取らずに、作品もしくは落書きがその場所に停滞する。
+            その停滞している間、落書きは夢のように現れ、夢のように消えて観客の中にしか残らない。
+            ちょうど例として、
+            私の記憶が正しければ代表的な人物として挙げるとキースヘリングだと思われます。
+            理由として、ピクトグラムという言語を活用し、夢の様に消えるという考え方にチョークを活用していたという事、
+            コミュニケーションの新しい形をいち早く取り入れていた事が、社会から見て一般社会に受け入れられたのだと思います。
+            特に1964年東京オリンピックの他国の方々とのコミュニケーションが難しい当時の日本人にとって間を取り持つために、勝見勝らによって開発されたのが始まりとあり、西洋という文化と和の文化が新しいカルチャーの源流を生み出したという意味では、
+            薬になり得たいい例なのだと思われます。
         </p>
         <p>Section2 Applicator of MAKERS</p>
         <p>
-            私の知る限り、塗布具は誰もが使う品物かと問われると、ある限られた人が製品を購入し役割を追えた後、気を止めないで捨ててしまう事は明白なのである。
-            私という個人は、塗布具とされる容器に取り付けられたDauberという製品を探ることで、どのようにDauberとしての機能が出来上がったのか気になり調べる事にした。
+            私の知る限り、塗布具は誰もが使う品物かと問われると、ある限られた人が製品を購入し役割を追えた後、気を止めないで捨ててしまう事が気になり、
+            個人としては、塗布具とされる容器に取り付けられたDauberという製品を探ることで、どのようにDauberとしての機能が出来上がったのか気になり調べる事にした。
             原型の初期段階は、1913年”Smith David W”によって特許への考案がされる。構造上、1913年代では金属のバネが、初期の原型とされ。 原型が出来上がってから間が空き、1964年に発泡ゴムなどの多孔性の弾性材料を使用したDauberが製造され今の形状に至る。
             その際に１９０７年代に合成樹脂が開発されていたが後５０年という空白を辿りDauberと合成樹脂が組み合わさった。
 
             およそ１９８０年代から現代までに、落書きという文化が活発に形成され、街での描く行為にDauberという塗布具が活用されているという背景が存在する。
-            落書きと塗布具という関係性は描くという行為に付属される為、その当時どの段階でDauberを利用していたかという記述は今の所、見当たらないが、
+            落書きと塗布具という関係性は描くという行為に付属する為、その当時どの段階でDauberを利用していたかという記述は今の所、見当たらないが、
             私の知る限り、2000年代に入りDauberという塗布具が日の目を見たと、私は記憶している。
-            時代背景は現代に移りネットワーク社会という枠組みは概念を取り纏められた単語を検索する事で力学から造形とどのように作られるのかという基本的な内容をネットを通して瞬時に垣間見れる様になり、今回の検索ワードは”MAKERS”という概念を知る事で知識としての入り口が突如として押し広げられるのだ。
-            ”MAKERS”電子機器による製造方法の拡張、現状日本では、2010年代の記憶を掘り起こすと拳銃などの製造ができるというニュースが飛び交い、それが事実、作るという工程に壁を設けられたのである。３Dプリンターへの関心が世間一般と世界から見た場合との差異が特に激しい。落書きという文化と同じく前例が犯罪に焦点を合わせてしまったがために、３Dプリンター＝犯罪予備軍とされる雰囲気がある。
-            しかし落書きのカルチャーと同じく創作するという行為は創造性を押し広げるという可能性を秘めている、なのでMAKERSという概念から３Dプリンターで何ができるかという事を学ぶ事で、私は製造過程を縮小する事が可能となり、その他の準備工程に時間を作る事が可能だと理解した。
-
-
+            時代背景は現代が移りネットワーク社会という枠組みになり概念として取り纏められた単語を検索する事で力学から造形と、どのように作られるのかという基本的な内容をネットを通して瞬時に垣間見れる様になり、今回の検索ワードは”MAKERS”という概念を知る事で知識としての入り口が突如として押し広げられる。
+            ”MAKERS”電子機器、製造方法の拡張、現状日本では、３Dプリンターを活用して創作活動へと昇華するという事は
 
         </p>
       </div>
