--- a/dauber.html
+++ b/dauber.html
@@ -149,9 +149,11 @@
       </div>
     </div>
   </div>
-  <div class="container">
-    <div id="productNav" class="col-md-12">
-      <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z"><span class="back-arrow"></span> Dauber STL Data</a>
+  <div id="main">
+    <div class="container">
+      <div id="productNav" class="col-md-12">
+        <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" onClick="_gaq.push(['_trackEvent','download','click','1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z']);"><span class="back-arrow"></span> Dauber data </a>
+      </div>
     </div>
   </div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
