--- a/dauber.html
+++ b/dauber.html
@@ -116,8 +116,10 @@
               <div class="item">
                 <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
+              <div class="item">
+                <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
             </div>
-
             <!-- Controls -->
             <!---->
             <a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
@@ -137,7 +139,9 @@
               <li data-target="#carousel-custom" data-slide-to="1">
                 <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
               </li>
-
+              <li data-target="#carousel-custom" data-slide-to="2">
+                <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="60" width="60">
+              </li>
             </ol>
             <!--Indicators end-->
           </div>
