--- a/dauber.html
+++ b/dauber.html
@@ -119,7 +119,11 @@
               <div class="item">
                 <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
+              <div class="item">
+                <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
             </div>
+
             <!-- Controls -->
             <!---->
             <a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
@@ -142,11 +146,12 @@
               <li data-target="#carousel-custom" data-slide-to="2">
                 <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="60" width="60">
               </li>
+              <li data-target="#carousel-custom" data-slide-to="2">
+                <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="60" width="60">
+              </li>
             </ol>
             <!--Indicators end-->
           </div>
-
-
 
           <!--carousel-custom-->
         </div>
