--- a/dauber.html
+++ b/dauber.html
@@ -103,14 +103,21 @@
 
     <div class="inner cover">
       <h1 class="cover-heading">
-    <font style="vertical-align: inherit;">
-      <font style="vertical-align: inherit;">あなたのページをカバーしてください。</font>
-    </font>
-  </h1>
-      <p class="lead"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">表紙は、シンプルで美しいホームページを作成するための1ページのテンプレートです。</font><font style="vertical-align: inherit;">テキストをダウンロード、編集し、独自のフルスクリーンの背景写真を追加して、独自の写真にします。</font></font></p>
+        <font style="vertical-align: inherit;">
+          <font style="vertical-align: inherit;">あなたのページをカバーしてください。</font>
+        </font>
+      </h1>
       <p class="lead">
-              <a href="#" class="btn btn-lg btn-default"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">もっと詳しく知る</font></font></a>
-            </p>
+        <font style="vertical-align: inherit;">
+          <font style="vertical-align: inherit;">表紙は、シンプルで美しいホームページを作成するための1ページのテンプレートです。</font>
+          <font style="vertical-align: inherit;">テキストをダウンロード、編集し、独自のフルスクリーンの背景写真を追加して、独自の写真にします。</font>
+        </font>
+      </p>
+      <p class="lead">
+        <a href="#" class="btn btn-lg btn-default"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">もっと詳しく知る</font>
+        </font>
+        </a>
+      </p>
     </div>
 
     <div id="main02">
