--- a/dauber.html
+++ b/dauber.html
@@ -134,7 +134,7 @@
         </div>
         <!--text-->
 
-        <p class="lead">
+        <p class="lead _btn">
 <a href="#" class="btn btn-lg btn-default"><font ><font >もっと詳しく知る</font>
 </font>
 </a>
