--- a/dauber.html
+++ b/dauber.html
@@ -129,16 +129,15 @@
                 ではkingsizeが出版されてから16年が経過した今、路上で活動を続けるライターたちにとってのDIYマーカーやツール、それだけでなくgraffitiはどう変化したのだろうか、このプロジェクトではkingsizeを参照としながら、現代とりわけ2010年代以降のデジタルテクノロジーの発展とともに発生したメーカーズムーブメント的手法をもとに3Dソフトによるモデリングから、ソーシャルネットワーキングによる情報共有、拡散を行い、現代におけるDIYマーカーのあり方を探る。</font>
                 </font>
               </p>
-
+            <p class="lead">
+        <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-lg btn-default"><font ><font >Dauber STL FILE</font>
+        </font>
+        </a>
+        </p>
           </div>
         </div>
         <!--text-->
 
-        <p class="lead">
-<a href="#" class="btn btn-lg btn-default"><font ><font >もっと詳しく知る</font>
-</font>
-</a>
-</p>
         <div class="col-md-12">
 
           <!--carousel-custom-->
@@ -191,13 +190,6 @@
 
           <!--carousel-custom-->
         </div>
-      </div>
-    </div>
-  </div>
-  <div id="main">
-    <div class="container">
-      <div id="productNav" class="col-md-12">
-        <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" onClick="_gaq.push(['_trackEvent','download','click','1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z']);"><span class="back-arrow"></span> Dauber data </a>
       </div>
     </div>
   </div>
