--- a/dauber.html
+++ b/dauber.html
@@ -128,8 +128,9 @@
 
                 ではkingsizeが出版されてから16年が経過した今、路上で活動を続けるライターたちにとってのDIYマーカーやツール、それだけでなくgraffitiはどう変化したのだろうか、このプロジェクトではkingsizeを参照としながら、現代とりわけ2010年代以降のデジタルテクノロジーの発展とともに発生したメーカーズムーブメント的手法をもとに3Dソフトによるモデリングから、ソーシャルネットワーキングによる情報共有、拡散を行い、現代におけるDIYマーカーのあり方を探る。</font>
                 </font>
-                <font>text by hikaru takata</font>
+
               </p>
+            <p><font>text by hikaru takata</font></p>
             <p class="lead">
         <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-lg btn-default"><font ><font >Dauber STL FILE</font>
         </font>
