--- a/dauber.html
+++ b/dauber.html
@@ -131,7 +131,7 @@
 
               </p>
             <p><font>text by hikaru takata</font></p>
-            <p class="lead" data-tooltip="ダウンロード">
+            <p class="lead" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">
         <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-lg btn-default"><font ><font >Dauber STL FILE</font>
         </font>
         </a>
