--- a/dauber.html
+++ b/dauber.html
@@ -131,7 +131,7 @@
 
               </p>
             <p><font>text by hikaru takata</font></p>
-            <p class="lead" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">
+            <p class="lead" data-toggle="tooltip" data-placement="bottom" title="ダウンロード">
         <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-lg btn-default"><font ><font >Dauber STL FILE</font>
         </font>
         </a>
@@ -200,5 +200,10 @@
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="js/crime.js"></script>
   <script src="js/tiltfx.js"></script>
+  <script>
+    $(document).ready(function () {
+      $('[data-toggle="tooltip"]').tooltip();
+    });
+  </script>
 </body>
 </html>
