--- a/dauber.html
+++ b/dauber.html
@@ -131,8 +131,8 @@
 
               </p>
             <p><font>text by hikaru takata</font></p>
-            <p class="lead" data-toggle="tooltip" data-placement="bottom" title="ダウンロード">
-        <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-secondary btn-sm"><font ><font >Dauber STL FILE</font>
+            <p class="lead" data-toggle="tooltip" data-placement="bottom" class="btn btn-secondary btn-sm" title="ダウンロード">
+        <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" ><font ><font >Dauber STL FILE</font>
         </font>
         </a>
         </p>
