--- a/dauber.html
+++ b/dauber.html
@@ -132,7 +132,7 @@
               </p>
             <p><font>text by hikaru takata</font></p>
             <p class="lead" data-toggle="tooltip" data-placement="bottom" title="ダウンロード">
-        <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-secondary btn-lg btn-block"><font ><font >Dauber STL FILE</font>
+        <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-primary btn-lg btn-block"><font ><font >Dauber STL FILE</font>
         </font>
         </a>
         </p>
