--- a/dauber.html
+++ b/dauber.html
@@ -110,8 +110,7 @@
             <h1 class="cover-heading">
                 <font>Dauber Project</font>
               </h1>
-            <p>
-                <font >2004年SwedenのA5pressからKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
+            <!--<p><font >2004年SwedenのA5pressからKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
                 これは私が知る限り唯一、DIYマーカー自体とその背景について記録された書籍である。
                 DIYマーカーとはグラフィティを行うライターたちがストリートでタギングのオリジナリティを競うとき必ず使用されるツールで、
                 彼らは既存のペンやマーカーの改造、靴磨きや車用のポリッシャーのような別用途である製品の流用、自己制作等を行い、それぞれにとって最良のマーカーを作るという行為を常に行ってきた。
@@ -124,10 +123,8 @@
                 先にも述べたように匿名性やクルーという性質を持つグラフィティカルチャーは、しばしばその細かな流れや背景等が、記録からもれ抜け落ちてしまうことが多い。その意味で世界のグローバリズムの中でグラフィティがNewYorkで広がっていく風景と、その後世界中に広がったていった背景、スウェーデン1国の背景や流れを後世に残る形でドキュメントしていたこの書籍の役割は大きい。
 
                 ではkingsizeが出版されてから16年が経過した今、路上で活動を続けるライターたちにとってのDIYマーカーやツール、それだけでなくgraffitiはどう変化したのだろうか、このプロジェクトではkingsizeを参照としながら、現代とりわけ2010年代以降のデジタルテクノロジーの発展とともに発生したメーカーズムーブメント的手法をもとに3Dソフトによるモデリングから、ソーシャルネットワーキングによる情報共有、拡散を行い、現代におけるDIYマーカーのあり方を探る。
-                </font>
+                </font></p>-->
 
-              </p>
-            <p><font>text by hikaru takata</font></p>
             <p class="lead" data-toggle="tooltip" data-placement="bottom" title="ダウンロード">
         <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-primary btn-lg btn-block"><font >Dauber STL FILE</font></a>
         </p>
