--- a/dauber.html
+++ b/dauber.html
@@ -111,23 +111,20 @@
                 <font>Dauber Project</font>
               </h1>
             <!--<p><font >2004年SwedenのA5pressからKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
-                これは私が知る限り唯一、DIYマーカー自体とその背景について記録された書籍である。
-                DIYマーカーとはグラフィティを行うライターたちがストリートでタギングのオリジナリティを競うとき必ず使用されるツールで、
-                彼らは既存のペンやマーカーの改造、靴磨きや車用のポリッシャーのような別用途である製品の流用、自己制作等を行い、それぞれにとって最良のマーカーを作るという行為を常に行ってきた。
+            これは私が知る限り唯一、DIYマーカー自体とその背景について記録された書籍である。
+            DIYマーカーとはグラフィティを行うライターたちがストリートでタギングのオリジナリティを競うとき必ず使用されるツールで、
+            彼らは既存のペンやマーカーの改造、靴磨きや車用のポリッシャーのような別用途である製品の流用、自己制作等を行い、それぞれにとって最良のマーカーを作るという行為を常に行ってきた。
 
-                イギリスから生まれ、1970年代に北米を中心に広がりを見せたDIYムーブメントと
-                時を同じくしてニューヨークで生まれたグラフィティにとってこうした流れはごく自然なことであった。
-                だがこうした技術や資料は、グラフィティの広がるスピードとは反対に、匿名性やクルー(家族団体)というグラフィティがもつ性質によって、一部の共同体の中でしかシェアされることがなかったため、インターネットが普及する近年まで書籍や情報として全体に共有されることが非常に少なかった。
+            イギリスから生まれ、1970年代に北米を中心に広がりを見せたDIYムーブメントと
+            時を同じくしてニューヨークで生まれたグラフィティにとってこうした流れはごく自然なことであった。
+            だがこうした技術や資料は、グラフィティの広がるスピードとは反対に、匿名性やクルー(家族団体)というグラフィティがもつ性質によって、一部の共同体の中でしかシェアされることがなかったため、インターネットが普及する近年まで書籍や情報として全体に共有されることが非常に少なかった。
 
-                Kingsizeは、その書籍の名のごとく大きなマーカーで、当時としては見ることがなかったであろう50mmの太さのマーカーの開発をしていく過程と、世界で活躍するライターたちに配布して実際に使用しているアクションを記録したもの。そしてadamsの序文、NYで初期にグラフィティライターの青年たちへのインタビューを行い書籍[getting up]を著したCraig Castlemanによる文章、世界大戦後グローバリズムが進む中で世界中にアメリカニゼーションが浸透していく様子と、その影響を受けるスウェーデン社会を捉えたAndreas Bergの論述で構成されていた。
-                先にも述べたように匿名性やクルーという性質を持つグラフィティカルチャーは、しばしばその細かな流れや背景等が、記録からもれ抜け落ちてしまうことが多い。その意味で世界のグローバリズムの中でグラフィティがNewYorkで広がっていく風景と、その後世界中に広がったていった背景、スウェーデン1国の背景や流れを後世に残る形でドキュメントしていたこの書籍の役割は大きい。
+            Kingsizeは、その書籍の名のごとく大きなマーカーで、当時としては見ることがなかったであろう50mmの太さのマーカーの開発をしていく過程と、世界で活躍するライターたちに配布して実際に使用しているアクションを記録したもの。そしてadamsの序文、NYで初期にグラフィティライターの青年たちへのインタビューを行い書籍[getting up]を著したCraig Castlemanによる文章、世界大戦後グローバリズムが進む中で世界中にアメリカニゼーションが浸透していく様子と、その影響を受けるスウェーデン社会を捉えたAndreas Bergの論述で構成されていた。
+            先にも述べたように匿名性やクルーという性質を持つグラフィティカルチャーは、しばしばその細かな流れや背景等が、記録からもれ抜け落ちてしまうことが多い。その意味で世界のグローバリズムの中でグラフィティがNewYorkで広がっていく風景と、その後世界中に広がったていった背景、スウェーデン1国の背景や流れを後世に残る形でドキュメントしていたこの書籍の役割は大きい。
 
-                ではkingsizeが出版されてから16年が経過した今、路上で活動を続けるライターたちにとってのDIYマーカーやツール、それだけでなくgraffitiはどう変化したのだろうか、このプロジェクトではkingsizeを参照としながら、現代とりわけ2010年代以降のデジタルテクノロジーの発展とともに発生したメーカーズムーブメント的手法をもとに3Dソフトによるモデリングから、ソーシャルネットワーキングによる情報共有、拡散を行い、現代におけるDIYマーカーのあり方を探る。
-                </font></p>-->
-
-            <p class="lead" data-toggle="tooltip" data-placement="bottom" title="ダウンロード">
-        <a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-primary btn-lg btn-block"><font >Dauber STL FILE</font></a>
-        </p>
+            ではkingsizeが出版されてから16年が経過した今、路上で活動を続けるライターたちにとってのDIYマーカーやツール、それだけでなくgraffitiはどう変化したのだろうか、このプロジェクトではkingsizeを参照としながら、現代とりわけ2010年代以降のデジタルテクノロジーの発展とともに発生したメーカーズムーブメント的手法をもとに3Dソフトによるモデリングから、ソーシャルネットワーキングによる情報共有、拡散を行い、現代におけるDIYマーカーのあり方を探る。
+            </font></p>-->
+            <!--<p class="lead" data-toggle="tooltip" data-placement="bottom" title="ダウンロード"><a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-primary btn-lg btn-block"><font >Dauber STL FILE</font></a></p>-->
           </div>
         </div>
         <!--text-->
