--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/v4-shims.css">
 
 </head>
-<body>
+<body id="bg">
   <header id="header">
     <div class="container">
       <div id="logo">
