--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
                 　<li><a class="dropdown-item" href="index.html">
-                    <p class="fas fa-home" name="home"></p></a></li>
+                    <p>home</p></a></li>
                 <li><a class="dropdown-item" href="project.html">
-                    <p class="fas fa-umbrella" name="project"></p></a></li>
+                    <p>project</p></a></li>
                 <!--<li><a class="dropdown-item" href="#">Another action</a>-->
                 <li>
               </ul>
