--- a/dauber.html
+++ b/dauber.html
@@ -30,9 +30,9 @@
             <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
                 　<li><a class="dropdown-item" href="index.html">
-                    <p class="fas fa-home">home</p></a></li>
+                    <p>home</p></a></li>
                 <li><a class="dropdown-item" href="project.html">
-                    <p class="fas fa-umbrella">project</p></a></li>
+                    <p>project</p></a></li>
                 <!--<li><a class="dropdown-item" href="#">Another action</a><li>-->
               </ul>
             </div>
