--- a/project.html
+++ b/project.html
@@ -23,9 +23,9 @@
             <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
                 　<li><a class="dropdown-item" href="index.html">
-                    <p class="fas fa-home">home</p></a></li>
+                    <p>home</p></a></li>
                 <li><a class="dropdown-item" href="project.html">
-                    <p class="fas fa-umbrella">project</p></a></li>
+                    <p>project</p></a></li>
                 <!--<li><a class="dropdown-item" href="#">Another action</a><li>-->
               </ul>
             </div>
@@ -99,9 +99,9 @@
           <img src="https://i.pinimg.com/originals/90/06/c6/9006c674363dd5df9f8b887ff98b3bf2.jpg" class="img-responsive center-block">
 
           <h2 style="font-size: 12px;">DauberSide</h2>
-          <p>Dauberという単語:下手な絵を書く人、塗る人、塗り道具
+          <!--<p>Dauberという単語:下手な絵を書く人、塗る人、塗り道具
             Projectの発端はKingsizeというZineから始まる。
-          </p>
+          </p>-->
 
         </div>
       </a>
