--- a/project.html
+++ b/project.html
@@ -98,7 +98,7 @@
         <div class="col-md-2">
           <img src="https://i.pinimg.com/originals/90/06/c6/9006c674363dd5df9f8b887ff98b3bf2.jpg" class="img-responsive center-block">
 
-          <h2>DauberSide</h2>
+          <h2 style="font-size: 12px; text-align: center;">DauberSide</h2>
           <!--<p>Dauberという単語:下手な絵を書く人、塗る人、塗り道具
             Projectの発端はKingsizeというZineから始まる。
           </p>-->
