--- a/project.html
+++ b/project.html
@@ -91,7 +91,7 @@
   <!--end-->
 
   <div id="main" class="container">
-    <div class="col-md-12"></div>
+    <div class="col-lg-12 "></div>
     <!-- Example row of columns -->
     <div class="row" style="max-width:1000px; width:100%; margin: 0 auto;">
       <a href="dauber.html">
