--- a/product.html
+++ b/product.html
@@ -92,7 +92,7 @@
 
   <div id="main2">
     <div class="container">
-      <div class="col-ld-12 ">
+      <div class="col-lg-12 ">
         <!-- Example row of columns -->
         <a href="dauber.html">
           <div class="col-md-2">
