--- a/product.html
+++ b/product.html
@@ -91,7 +91,7 @@
   <!--end-->
 
   <div id="main2">
-    <div class="container">
+    <div class=".container-md">
       <div class="col-lg-12 ">
         <!-- Example row of columns -->
         <a href="dauber.html">
