--- a/project.html
+++ b/project.html
@@ -145,7 +145,7 @@
   <!--main-->
   <div id="main">
     <div class="container">
-      <div id="productNav" class="col-md-12">
+      <div id="productNav_footer" class="col-md-12">
         <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
       </div>
     </div>
