--- a/dauber.html
+++ b/dauber.html
@@ -178,6 +178,13 @@
       </div>
     </div>
   </div>
+  <div id="main">
+    <div class="container">
+      <div id="productNav" class="col-md-12">
+        <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+      </div>
+    </div>
+  </div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
